feat: added user api
