# helpers/validationSchemas.js
@@ -3,22 +3,20 @@ const Joi = require('joi');
 //Configs
 const configs = require('../configs');
 
-const {
-	userPassLengthMin,
-	userPassLengthMax,
-	usernameLengthMin,
-	usernameLengthMax,
-} = configs.users;
+/**
+ * =============== Authentication schemas =====================================
+ */
+const { usernameMin, usernameMax, userPassMin, userPassMax } = configs.users;
 
 const signUpSchema = Joi.object({
-	username: Joi.string().min(usernameLengthMin).max(usernameLengthMax).required(),
+	username: Joi.string().min(usernameMin).max(usernameMax).required(),
 	email: Joi.string().email().required(),
-	password: Joi.string().min(userPassLengthMin).max(userPassLengthMax).required(),
+	password: Joi.string().min(userPassMin).max(userPassMax).required(),
 });
 
 const signInSchema = Joi.object({
 	email: Joi.string().email().required(),
-	password: Joi.string().min(userPassLengthMin).max(userPassLengthMax).required(),
+	password: Joi.string().min(userPassMin).max(userPassMax).required(),
 });
 
 module.exports = {
