# swagger.json
@@ -1,7 +1,7 @@
 {
 	"openapi": "3.0.1",
 	"info": {
-		"version": "1.1.0",
+		"version": "1.2.0",
 		"title": "KidsLike API docs",
 		"description": "API documentation for GoIT FS-36 group project 'KidsLike'.  [Backend github repository](https://github.com/IgorSapko/KidsLike_backEnd)",
 		"license": {
@@ -15,6 +15,10 @@
 		}
 	],
 	"tags": [
+		{
+			"name": "User",
+			"description": "User endpoints"
+		},
 		{
 			"name": "Auth",
 			"description": "Authorization endpoints"
@@ -111,6 +115,42 @@
 					"204": {
 						"description": "Successful operation",
 						"content": {}
+					},
+					"400": {
+						"description": "No token provided",
+						"content": {}
+					},
+					"401": {
+						"description": "Bearer auth failed",
+						"content": {}
+					},
+					"404": {
+						"description": "Invalid user",
+						"content": {}
+					}
+				}
+			}
+		},
+		"/api/user/current": {
+			"get": {
+				"tags": ["User"],
+				"summary": "Get current user all info and checks current week",
+				"security": [
+					{
+						"Bearer": []
+					}
+				],
+				"parameters": [],
+				"responses": {
+					"200": {
+						"description": "Successful operation",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CurrentUser"
+								}
+							}
+						}
 					},
 					"400": {
 						"description": "No token provided",
@@ -285,6 +325,166 @@
 								"example": [
 									{
 										"_id": "507f1d12bcf8dq12e08aa123",
+										"title": "Task 1",
+										"reward": 5,
+										"imageUrl": "example.com/image1",
+										"days": [
+											{
+												"date": "01-03-2021",
+												"isActive": false,
+												"isCompleted": false
+											},
+											{
+												"date": "02-03-2021",
+												"isActive": false,
+												"isCompleted": false
+											},
+											{
+												"date": "03-03-2021",
+												"isActive": false,
+												"isCompleted": false
+											},
+											{
+												"date": "04-03-2021",
+												"isActive": false,
+												"isCompleted": false
+											},
+											{
+												"date": "05-03-2021",
+												"isActive": true,
+												"isCompleted": false
+											},
+											{
+												"date": "06-03-2021",
+												"isActive": false,
+												"isCompleted": false
+											},
+											{
+												"date": "07-03-2021",
+												"isActive": true,
+												"isCompleted": true
+											}
+										]
+									}
+								]
+							}
+						}
+					}
+				}
+			},
+			"CurrentUser": {
+				"type": "object",
+				"properties": {
+					"user": {
+						"type": "object",
+						"properties": {
+							"id": {
+								"type": "string",
+								"description": "User's id",
+								"example": "60295cfb80a2de13a08aa123"
+							},
+							"username": {
+								"type": "string",
+								"description": "User's name",
+								"example": "Mango"
+							},
+							"email": {
+								"type": "string",
+								"description": "User's email",
+								"format": "email"
+							},
+							"balance": {
+								"type": "integer",
+								"description": "User's rewards balance",
+								"example": 5,
+								"minimum": 0
+							}
+						}
+					},
+					"week": {
+						"type": "object",
+						"description": "User's current week",
+						"properties": {
+							"_id": {
+								"type": "string",
+								"description": "Week's id",
+								"example": "507f1f77bcf86cd799439016"
+							},
+							"startWeekDate": {
+								"type": "string",
+								"description": "Week start date",
+								"example": "01-03-2021"
+							},
+							"endWeekDate": {
+								"type": "string",
+								"description": "Week end date",
+								"example": "07-03-2021"
+							},
+							"pointsGained": {
+								"type": "integer",
+								"description": "Amount of rewards gained this week",
+								"example": 5
+							},
+							"pointsPlanned": {
+								"type": "integer",
+								"description": "Amount of rewards planned for this week",
+								"example": 10
+							},
+							"tasks": {
+								"type": "array",
+								"description": "Array of week's tasks",
+								"items": {
+									"type": "object",
+									"description": "Week's task",
+									"properties": {
+										"_id": {
+											"type": "string",
+											"description": "Week's id",
+											"example": "111f1f77bcsf3q13a08aa433"
+										},
+										"title": {
+											"type": "string",
+											"description": "Task's title",
+											"example": "Task 1"
+										},
+										"reward": {
+											"type": "integer",
+											"description": "Task's reward",
+											"example": 5,
+											"minimum": 1
+										},
+										"imageUrl": {
+											"type": "string",
+											"description": "Task's image URL"
+										},
+										"days": {
+											"type": "array",
+											"description": "Task's days",
+											"items": {
+												"type": "object",
+												"description": "Day's task",
+												"properties": {
+													"date": {
+														"type": "string",
+														"description": "Day's date",
+														"example": "01-03-2021"
+													},
+													"isActive": {
+														"type": "boolean",
+														"description": "Task's active status"
+													},
+													"isCompleted": {
+														"type": "boolean",
+														"description": "Task's complete status"
+													}
+												}
+											}
+										}
+									}
+								},
+								"example": [
+									{
+										"_id": "445f1f33qcf11ed799439123",
 										"title": "Task 1",
 										"reward": 5,
 										"imageUrl": "example.com/image1",
